# substance-vs-style

./: .gitignore  LICENSE  README.md  alternating_automata.py  apply_substitutions.py  charlie_synonyms.csv  charlie_synonyms_with_counts.csv  codebook.txt  format_yaml.py  init_tags.py  jsonl_to_yaml.py  problem_clues.yaml  problem_tags.yaml  problems.yaml  prompt_notes.md  prompt_steps.py  pyproject.toml  run_all_analysis.sh  run_problem_subst.sh  see_pass_1.ipynb  studenteval.py  subst_prompts_return_output.jsonl  tagged_prompt_for_edits.yaml  tagged_prompts.jsonl  tagged_prompts_for_edits.yaml  tagged_prompts_middle_for_edits.yaml  to_csv.py  to_subst_hf.py  utils.py  view_all.sh  yaml_to_jsonl.py
assisted_annotate/: README.md  clues.yaml  clues_template.yaml  edges.py  edges_add_word.yaml  edges_altText.yaml  edges_assessVowels.yaml  edges_check_for_aspen.yaml  first_attemps_check_for_aspen.yaml  first_attempts.py  first_attempts_altText.yaml  first_attempts_assessVowels.yaml  first_attempts_laugh.yaml  laugh_edges.yaml  laugh_prompt.yaml  main.py  patchback.py  problem_clues.py  prompt_add_word.yaml  prompt_altText.yaml  prompt_assessVowels.yaml  prompt_check_for_aspen.yaml
causal_intervention/: Generate heatmaps and inputs for mixed-effects models.ipynb  analysis.Rmd  figures.Rmd  gpt4o_mini.csv  llama3p1_70b_base.csv  llama3p1_8b_base.csv  significant_results.md  stats-large.Rmd  stats-small.Rmd
eval_scripts/: Dockerfile  README.md  pass_k.py  prompt_viewer.py  run_eval.py
for_edits/: Carolyn_annotated_two_of_each_firstlast.yaml  README.md  diffs.txt  (+13 more)
(+859 files in other folders)
